add image publish flow

--- a/src/containers/kong/Dockerfile
+++ b/src/containers/kong/Dockerfile
@@ -1,11 +1,17 @@
 FROM --platform=linux/amd64 public.ecr.aws/docker/library/kong:2.8 AS build
 
-ARG CPU_ARCHITECTURE=arm64 # arm64 or x86_64
+ARG TARGETPLATFORM
+ENV ENVSUBST_VERSION=v1.2.0
 
 USER root
 
 RUN apk update && apk add curl
-RUN curl -L https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-Linux-${CPU_ARCHITECTURE} -o /tmp/envsubst && chmod +x /tmp/envsubst
+RUN case ${TARGETPLATFORM} in \
+         "linux/amd64")  ENVSUBST_ARCH=Linux-x86_64  ;; \
+         "linux/arm64")  ENVSUBST_ARCH=Linux-arm64  ;; \
+    esac \
+   && curl -L https://github.com/a8m/envsubst/releases/download/${ENVSUBST_VERSION}/envsubst-${ENVSUBST_ARCH} -o /tmp/envsubst \
+   && chmod +x /tmp/envsubst
 RUN sed -i 1a"envsubst -i /home/kong/kong-template.yml -o /home/kong/kong.yml" /docker-entrypoint.sh
 
 FROM public.ecr.aws/docker/library/kong:2.8
