--- a/.github/workflows/publish-kong-image.yml
+++ b/.github/workflows/publish-kong-image.yml
@@ -16,28 +16,36 @@ jobs:
       contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.ECR_PUBLIC_ROLE }}
           aws-region: us-east-1
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ${{ env.REPO_URI }}
-          flavor: |
-            latest=true
-          tags: |
-            type=raw,value=lates
-      - name: Build and push Docker image
+
+      #- name: Extract metadata (tags, labels) for Docker
+      #  id: meta
+      #  uses: docker/metadata-action@v4
+      #  with:
+      #    images: |
+      #      ${{ env.REPO_URI }}
+      #    flavor: |
+      #      latest=true
+      #    tags: |
+      #      type=raw,value=lates
+
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./src/containers/kong/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.REPO_URI }}:latest
