--- a/.github/workflows/publish-sam.yml
+++ b/.github/workflows/publish-sam.yml
@@ -34,7 +34,7 @@ jobs:
         run: yarn install --check-files
 
       - name: cdk build
-        run: $(npm bin)/cdk build
+        run: npx projen build
 
       - name: cdk synth
         run: $(npm bin)/cdk synth --build --no-staging --no-version-reporting --json | jq 'del(.Rules.CheckBootstrapVersion)' |  jq 'del(.Parameters.BootstrapVersion)' > template.json
