--- a/.github/workflows/publish-sam.yml
+++ b/.github/workflows/publish-sam.yml
@@ -40,7 +40,7 @@ jobs:
         run: $(npm bin)/cdk synth --build --no-staging --no-version-reporting --json | jq 'del(.Rules.CheckBootstrapVersion)' |  jq 'del(.Parameters.BootstrapVersion)' > template.json
 
       - name: test
-        run: template.json
+        run: cat template.json
 
       - name: sam build
         run: sam build -t template.json
