--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@databases/pg": "^5.4.1",
     "@types/aws-lambda": "^8.10.101",
     "aws-cdk-lib": "^2.35.0",
+    "cdk-bootstrapless-synthesizer": "^2.2.2",
     "constructs": "^10.0.5",
     "jsonwebtoken": "^8.5.1"
   },
