--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
           BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-assets-${AWS::Region}'
-          BSS_FILE_ASSET_REGION_SET: us-east-1
+          #BSS_FILE_ASSET_REGION_SET: us-east-1
           BSS_FILE_ASSET_PREFIX: latest/
 
       - name: Publish assets
