--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
           BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-assets-${AWS::Region}'
-          #BSS_FILE_ASSET_REGION_SET: us-east-1, us-west-2
+          BSS_FILE_ASSET_REGION_SET: us-east-1, us-west-2
           BSS_FILE_ASSET_PREFIX: latest/
 
       - name: Configure AWS credentials
