--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -43,3 +43,8 @@ jobs:
 
       - name: Publish assets
         run: npx cdk-assets publish -p cdk.out/Supabase.assets.json -v
+        env:
+          BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
+          BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-assets-${AWS::Region}'
+          BSS_FILE_ASSET_REGION_SET: us-east-1, us-west-2
+          BSS_FILE_ASSET_PREFIX: latest/        
