--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -24,6 +24,11 @@ jobs:
           role-to-assume: ${{ secrets.FILE_PUBLISHING_ROLE }}
           aws-region: us-west-2
 
+      - name: Remove env
+        run: |
+          export -n AWS_DEFAULT_REGION
+          export -n AWS_REGION
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -42,4 +47,4 @@ jobs:
         run: $(npm bin)/cdk synth --no-version-reporting
 
       - name: Publish assets
-        run: npx cdk-assets publish -p cdk.out/Supabase.assets.json -v     
+        run: npx cdk-assets publish -p cdk.out/Supabase.assets.json -v
