--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch: {}
 env:
-  BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
+  #BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
   BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-assets-${AWS::Region}'
   BSS_FILE_ASSET_REGION_SET: us-east-1, us-west-2
   BSS_FILE_ASSET_PREFIX: latest/
