--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -5,10 +5,8 @@ on:
       - main
   workflow_dispatch: {}
 env:
-  #BSS_TEMPLATE_BUCKET_NAME: supabase-on-aws
-  BSS_TEMPLATE_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
   BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
-  BSS_FILE_ASSET_REGION_SET: us-east-1, us-west-2
+  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2
   BSS_FILE_ASSET_PREFIX: latest/
 
 jobs:
@@ -41,6 +39,14 @@ jobs:
 
       - name: cdk synth
         run: $(npm bin)/cdk synth --no-version-reporting
+
+      - name: remove old template
+        run: |
+          region_list=(${BSS_FILE_ASSET_REGION_SET//,/ })
+          for region in ${region_list[@]}; do
+              bucket_name=(${BSS_FILE_ASSET_BUCKET_NAME//\$\{AWS::Region\}/$region})
+              aws s3 rm s3://$bucket_name/${BSS_FILE_ASSET_PREFIX}Supabase.template.json
+          done
 
       - name: Publish assets
         run: npx cdk-assets publish --path cdk.out/Supabase.assets.json --verbose
