--- a/.github/workflows/publish-cfn-templates.yml
+++ b/.github/workflows/publish-cfn-templates.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: {}
 env:
   BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
-  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2
+  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2,eu-west-1,ap-northeast-1,ap-southeast-1
   BSS_FILE_ASSET_PREFIX: latest/
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ secrets.FILE_PUBLISHING_ROLE }}
+          role-to-assume: ${{ secrets.CDK_PUBLISHING_ROLE }}
           aws-region: us-west-2
 
       - name: Checkout
