bug fix about smtp password

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^14",
+    "@types/utf8": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2.37.1",
@@ -54,7 +55,8 @@
     "aws-cdk-lib": "^2.37.1",
     "cdk-bootstrapless-synthesizer": "^2.2.2",
     "constructs": "^10.0.5",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "utf8": "^3.0.0"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
