--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     env:
       ECR_PUBLIC_REGISTRY: public.ecr.aws/u3p7q2r8
-      IMAGE_NAME: supabase-kong
+      IMAGE_NAME: kong
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -63,6 +63,56 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ env.ECR_PUBLIC_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+  postgraphile:
+    name: PostGraphile Docker Image
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # needed to interact with GitHub's OIDC Token endpoint.
+      contents: read
+    env:
+      ECR_PUBLIC_REGISTRY: public.ecr.aws/u3p7q2r8
+      IMAGE_NAME: postgraphile
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: technote-space/get-diff-action@v6
+        with:
+          PATTERNS: |
+            src/containers/postgraphile/**/*
+            .github/workflows/publish.yml
+
+      - name: Set up QEMU
+        if: env.GIT_DIFF
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        if: env.GIT_DIFF
+        uses: docker/setup-buildx-action@v2
+
+      - name: Configure AWS credentials
+        if: env.GIT_DIFF
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.ECR_PUBLIC_ROLE }}
+          aws-region: us-east-1
+
+      - name: Login to ECR Public
+        if: env.GIT_DIFF
+        run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ env.ECR_PUBLIC_REGISTRY }}
+
+      - name: Build and push
+        if: env.GIT_DIFF
+        uses: docker/build-push-action@v3
+        with:
+          context: ./src/containers/postgraphile
+          file: ./src/containers/postgraphile/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ env.ECR_PUBLIC_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.ECR_PUBLIC_REGISTRY }}/${{ env.IMAGE_NAME }}:4
 
   cloudformation:
     name: CloudFormation Templates
