--- a/.github/workflows/stable-publish.yml
+++ b/.github/workflows/stable-publish.yml
@@ -3,11 +3,6 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_call:
-    inputs:
-      version:
-        required: true
-        type: string
 
 jobs:
   cloudformation:
@@ -22,6 +17,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Get the version tag
+        run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: node.js setup
         uses: actions/setup-node@v3
@@ -56,7 +54,7 @@ jobs:
       - name: cdk synth
         run: $(npm bin)/cdk synth --no-version-reporting
         env:
-          BSS_FILE_ASSET_PREFIX: ${{ github.event.inputs.version }}/
+          BSS_FILE_ASSET_PREFIX: ${{ env.TAG }}/
 
       - name: Publish assets
         run: npx cdk-assets publish --path cdk.out/Supabase.assets.json --verbose
