--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@aws-sdk/client-secrets-manager": "^3.137.0",
     "@aws-sdk/client-ses": "^3.141.0",
     "@aws-sdk/client-ssm": "^3.154.0",
-    "@aws-sdk/client-workmail": "^3.137.0",
+    "@aws-sdk/client-wafv2": "^3.159.0",
     "@databases/pg": "^5.4.1",
     "@types/aws-lambda": "^8.10.101",
     "aws-cdk-lib": "^2.38.0",
