--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@aws-sdk/client-ses": "^3.141.0",
     "@aws-sdk/client-ssm": "^3.154.0",
     "@aws-sdk/client-wafv2": "^3.159.0",
+    "@aws-sdk/util-utf8-node": "^3.109.0",
     "@databases/pg": "^5.4.1",
     "@types/aws-lambda": "^8.10.101",
     "aws-cdk-lib": "^2.38.0",
