--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.40.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.40.0-alpha.0",
     "@aws-sdk/client-ecs": "^3.154.0",
     "@aws-sdk/client-secrets-manager": "^3.137.0",
     "@aws-sdk/client-ses": "^3.141.0",
