--- a/src/containers/kong/kong-template.yml
+++ b/src/containers/kong/kong-template.yml
@@ -6,7 +6,7 @@ _format_version: "1.1"
 plugins:
   - name: opentelemetry
     config: 
-      endpoint: http://localhost:4318/v1/traces
+      endpoint: ${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT:-http://localhost:4318/v1/traces}
 
 ###
 ### Consumers / Users
