--- a/src/containers/kong/kong-template.yml
+++ b/src/containers/kong/kong-template.yml
@@ -5,6 +5,7 @@ _format_version: "1.1"
 ###
 plugins:
   - name: opentelemetry
+    enabled: ${KONG_OPENTELEMETRY_ENABLED:-false}
     config: 
       endpoint: ${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT:-http://localhost:4318/v1/traces}
 
