--- a/.github/workflows/stable-publish.yml
+++ b/.github/workflows/stable-publish.yml
@@ -5,7 +5,7 @@ on:
       - 'v*'
 env:
   BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
-  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2,eu-west-1,ap-northeast-1,ap-northeast-2,ap-southeast-1,ap-southeast-2
+  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2,eu-west-1,ap-northeast-1,ap-northeast-2,ap-northeast-3,ap-southeast-1,ap-southeast-2
 
 jobs:
   stable:
