--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/utf8": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.50.0",
+    "aws-cdk": "^2.51.1",
     "esbuild": "^0.14.49",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -47,6 +47,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-amplify-alpha": "^2.50.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.40.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.40.0-alpha.0",
     "@aws-sdk/client-ecs": "^3.154.0",
@@ -58,7 +59,7 @@
     "@aws-sdk/util-utf8-node": "^3.109.0",
     "@databases/pg": "^5.4.1",
     "@types/aws-lambda": "^8.10.101",
-    "aws-cdk-lib": "^2.50.0",
+    "aws-cdk-lib": "^2.51.1",
     "cdk-bootstrapless-synthesizer": "^2.2.2",
     "constructs": "^10.0.5",
     "jsonwebtoken": "^8.5.1",
