--- a/package.json
+++ b/package.json
@@ -47,15 +47,19 @@
     "@aws-cdk/aws-amplify-alpha": "^2.53.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.53.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.53.0-alpha.0",
+    "@aws-lambda-powertools/logger": "^1.5.0",
+    "@aws-lambda-powertools/tracer": "^1.5.0",
+    "@aws-sdk/client-cloudfront": "^3.231.0",
     "@aws-sdk/client-ecs": "^3.154.0",
     "@aws-sdk/client-secrets-manager": "^3.137.0",
     "@aws-sdk/client-ses": "^3.141.0",
+    "@aws-sdk/client-sqs": "^3.231.0",
     "@aws-sdk/client-ssm": "^3.154.0",
     "@aws-sdk/client-wafv2": "^3.159.0",
     "@aws-sdk/client-workmail": "^3.178.0",
     "@aws-sdk/util-utf8-node": "^3.109.0",
     "@databases/pg": "^5.4.1",
-    "@types/aws-lambda": "^8.10.101",
+    "@types/aws-lambda": "^8.10.109",
     "aws-cdk-lib": "^2.53.0",
     "cdk-bootstrapless-synthesizer": "^2.2.2",
     "constructs": "^10.0.5",
