--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "supabase-on-aws",
+  "description": "Self-hosted Supabase on AWS",
   "scripts": {
     "build": "npx projen build",
     "bundle": "npx projen bundle",
@@ -17,7 +18,6 @@
     "synth": "npx projen synth",
     "synth:silent": "npx projen synth:silent",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "watch": "npx projen watch",
     "projen": "npx projen"
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^14",
+    "@types/node": "^16",
     "@types/utf8": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -36,9 +36,8 @@
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
-    "jest-junit": "^13",
-    "json-schema": "^0.4.0",
-    "projen": "^0.59.7",
+    "jest-junit": "^15",
+    "projen": "0.70.5",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
