--- a/.github/workflows/cfn-publish.yml
+++ b/.github/workflows/cfn-publish.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
-  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2,eu-west-1,ap-northeast-1,ap-northeast-2,ap-northeast-3,ap-southeast-1,ap-southeast-2
+  BSS_FILE_ASSET_REGION_SET: us-east-1,us-west-2,eu-west-1,ap-northeast-1,ap-northeast-2,ap-northeast-3,ap-southeast-1,ap-southeast-2,ap-south-1
   BSS_FILE_ASSET_PREFIX: latest/
 
 jobs:
