--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@aws-cdk/aws-amplify-alpha": "^2.53.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.53.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.53.0-alpha.0",
-    "@aws-lambda-powertools/logger": "^1.5.0",
-    "@aws-lambda-powertools/tracer": "^1.5.0",
+    "@aws-lambda-powertools/logger": "1.14.2",
+    "@aws-lambda-powertools/tracer": "1.14.2",
     "@aws-sdk/client-cloudfront": "^3.231.0",
     "@aws-sdk/client-ecs": "^3.154.0",
     "@aws-sdk/client-secrets-manager": "^3.137.0",
