--- a/.github/workflows/cfn-publish-stable.yml
+++ b/.github/workflows/cfn-publish-stable.yml
@@ -36,7 +36,7 @@ jobs:
           aws-region: us-west-2
 
       - name: cdk synth
-        run: npm run synth --no-version-reporting
+        run: npx projen synth --name Supabase --no-version-reporting
         env:
           BSS_FILE_ASSET_PREFIX: stable/
 
@@ -79,7 +79,7 @@ jobs:
           aws-region: us-west-2
 
       - name: cdk synth
-        run: npm run synth --no-version-reporting
+        run: npx projen synth --name Supabase --no-version-reporting
         env:
           BSS_FILE_ASSET_PREFIX: ${{ env.TAG }}/
 
