--- a/.github/workflows/cfn-publish.yml
+++ b/.github/workflows/cfn-publish.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: cdk synth
         if: env.GIT_DIFF
-        run: npm run synth --no-version-reporting
+        run: npx projen synth --name Supabase --no-version-reporting
 
       - name: remove old template
         if: env.GIT_DIFF
