--- a/.github/workflows/waf-cfn-publish.yml
+++ b/.github/workflows/waf-cfn-publish.yml
@@ -5,6 +5,11 @@ on:
       - main
   workflow_dispatch: {}
 
+env:
+  BSS_FILE_ASSET_BUCKET_NAME: 'supabase-on-aws-${AWS::Region}'
+  BSS_FILE_ASSET_REGION_SET: us-east-1
+  BSS_FILE_ASSET_PREFIX: latest/
+  
 jobs:
   latest:
     name: Latest Cfn templates
