feat: support edge-functions

--- a/containers/kong/Dockerfile
+++ b/containers/kong/Dockerfile
@@ -1,7 +1,7 @@
-FROM --platform=linux/amd64 public.ecr.aws/docker/library/kong:3.0 AS build
+FROM --platform=linux/amd64 public.ecr.aws/docker/library/kong:3.1.1-alpine AS build
 
 ARG TARGETPLATFORM
-ENV ENVSUBST_VERSION=v1.2.0
+ENV ENVSUBST_VERSION=v1.4.2
 
 USER root
 
@@ -14,13 +14,12 @@ RUN case ${TARGETPLATFORM} in \
    && curl -L https://github.com/a8m/envsubst/releases/download/${ENVSUBST_VERSION}/envsubst-${ENVSUBST_ARCH} -o /tmp/envsubst \
    && chmod +x /tmp/envsubst
 
-RUN sed -i 1a"envsubst -i /home/kong/kong-template.yml -o /home/kong/kong.yml" /docker-entrypoint.sh
-
-FROM public.ecr.aws/docker/library/kong:3.0
+FROM public.ecr.aws/docker/library/kong:3.1.1-alpine
 
 COPY --from=build /tmp/envsubst /usr/local/bin/envsubst
-COPY --from=build /docker-entrypoint.sh /docker-entrypoint.sh
-COPY ./kong-template.yml /home/kong/kong-template.yml
+COPY ./kong-template.yml /home/kong/tmp.yml
 
 ENV KONG_DATABASE=off \
     KONG_DECLARATIVE_CONFIG=/home/kong/kong.yml
+
+ENTRYPOINT ["bash", "-c", "envsubst -i ~/tmp.yml -o ~/kong.yml && /docker-entrypoint.sh kong docker-start"]
