chore: kong base image

--- a/containers/kong/Dockerfile
+++ b/containers/kong/Dockerfile
@@ -1,11 +1,11 @@
-FROM --platform=linux/amd64 public.ecr.aws/docker/library/kong:3.1.1-alpine AS build
+FROM public.ecr.aws/docker/library/kong:3.5.0 AS build
 
 ARG TARGETPLATFORM
 ENV ENVSUBST_VERSION=v1.4.2
 
 USER root
 
-RUN apk update && apk add curl
+RUN apt-get update && apt-get install -y curl
 
 RUN case ${TARGETPLATFORM} in \
          "linux/amd64")  ENVSUBST_ARCH=Linux-x86_64  ;; \
@@ -14,7 +14,9 @@ RUN case ${TARGETPLATFORM} in \
    && curl -L https://github.com/a8m/envsubst/releases/download/${ENVSUBST_VERSION}/envsubst-${ENVSUBST_ARCH} -o /tmp/envsubst \
    && chmod +x /tmp/envsubst
 
-FROM public.ecr.aws/docker/library/kong:3.1.1-alpine
+FROM public.ecr.aws/docker/library/kong:3.5.0
+
+WORKDIR /home/kong
 
 COPY --from=build /tmp/envsubst /usr/local/bin/envsubst
 COPY ./kong-template.yml /home/kong/tmp.yml
